# version_weaver

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: linter.yml  macos.yml  ubuntu.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
include/: version_weaver.h
napi/: .gitignore  CMakeLists.txt  compare_test_status.mjs  node-semver.cc  package.json
napi/tap_output/test/functions/: coerce.js.tap
napi/tap_output/test/internal/: debug.js.tap
napi/templates/: functions.template
src/: CMakeLists.txt  version_weaver.cpp
tests/: CMakeLists.txt  basictests.cpp
